	    - org.openjump.core.ui.plugin.tools.IntersectPolygonLayersPlugIn
	    - com.vividsolutions.jump.workbench.ui.plugin.analysis.SpatialJoinPlugIn
	    - org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn
	    - com.vividsolutions.jump.workbench.ui.plugin.analysis.UnionPlugIn
	    - org.openjump.core.ui.plugin.tools.UnionByAttributePlugIn

2011-06-19 Matthias Scholz <ms@jammerhund.de>
	* MultiClickTool.displayMetrics()
		* Fix of bug 3034927 - Measure Tool Doesn't Comply With Snap

2011-06-18 mmichaud <michael.michaud@free.fr>
    * Fix LayerStyle2SLDPlugin and the corresponding xsl
      so that it works without xalan.
      To achieve that, the prefix of the user-defined namespace is now set to
      "oj:", whatever the namespace is.
    * Add LayerStyle2SLDPlugin and ImportSLDPlugIn in Layer>Style context menu
      with an icon from Giuseppe

2011-06-17 Matthias Scholz <ms@jammerhund.de>
	* update german translation

2011-06-13 Matthias Scholz <ms@jammerhund.de>
	* InstallSkinsPlugIn.initialize(): change from hardcoded look and feel to 
		retrieval of available look and feel's
	* i18n of the word "Skin" in the SkinOptionsPanel
	* Bugfix MultiClickTool.getShape():
		* an IndexOutOfBoundsExeption occurs if you use a MultiClickTool and a
			menu is open.

2011-06-10 Matthias Scholz <ms@jammerhund.de>
	* Fix NullPointerException in SystemLayerFinder.getLayer() and 
		SelectionStyllingOptionsPanel.okPressed(), if no active internal frame
		is there.
		The NPE's came when you press the OK button in the options dialog.

2011-05-28 mmichaud <michael.michaud@free.fr>
    * ui improvements : add/change icons from Giuseppe Aruta distribution (jefre)
      File>SaveProject
      File>SaveProjectAs
      File>Open Wizard>Database
      File>Open wizard>Open File : same icon as File>Open File
      File>Open Wizard>Open Project : same icon as File>Open Project
      Help>Keyboard
      Help>Info
      LayerPopup > LayerProperties
      