@@ -33,19 +33,26 @@
 package com.vividsolutions.jump.workbench.ui.plugin;
 
 import java.util.Date;
+import javax.swing.ImageIcon;
 
 import com.vividsolutions.jump.I18N;
 import com.vividsolutions.jump.workbench.plugin.AbstractPlugIn;
 import com.vividsolutions.jump.workbench.plugin.PlugInContext;
+import com.vividsolutions.jump.workbench.ui.images.IconLoader;
 
 
 public class GenerateLogPlugIn extends AbstractPlugIn {
+    
     public GenerateLogPlugIn() {
     }
     
     public String getName() {
 		return I18N.get("ui.plugin.GenerateLogPlugIn.log");
 	}
+	
+	public ImageIcon getIcon() {
+        return IconLoader.icon("application_view_list.png");
+    }
 
     public boolean execute(PlugInContext context) throws java.lang.Exception {
         reportNothingToUndoYet(context);
@@ -54,7 +61,6 @@ public class GenerateLogPlugIn extends AbstractPlugIn {
         context.getOutputFrame().addHeader(2, I18N.get("ui.plugin.GenerateLogPlugIn.generated")+" " + new Date());
         context.getOutputFrame().addText(context.getWorkbenchFrame().getLog());
         context.getOutputFrame().surface();
-
         return true;
     }
 }
