@@ -1035,7 +1035,7 @@ org.openjump.core.ui.plugin.view.ZoomToScalePlugIn.scale = \u00E9chelle
 org.openjump.core.ui.plugin.view.ZoomToScalePlugIn.set-new-scale-to-zoom = Entrer la nouvelle \u00E9chelle
 org.openjump.core.ui.plugin.view.ZoomToScalePlugIn.zoom-to-scale = Zoomer \u00E0 l'\u00E9chelle
 org.openjump.core.ui.plugin.window.MosaicInternalFramesPlugIn.Mosaic = Mosa\u00EFque
-org.openjump.core.ui.plugin.window.SyncronizationPlugIn.Desynchronize = D\u00E9synchronizer
+org.openjump.core.ui.plugin.window.SyncronizationPlugIn.Desynchronize = D\u00E9synchroniser
 org.openjump.core.ui.plugin.window.SyncronizationPlugIn.Synchronization = Synchronisation
 org.openjump.core.ui.plugin.window.SyncronizationPlugIn.Synchronize-pan-and-zoom = Synchroniser les d\u00E9placements et les zooms
 org.openjump.core.ui.plugin.window.SyncronizationPlugIn.Synchronize-pan-only = Synchroniser les d\u00E9placements
